# frameflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  GOVERNANCE.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  alembic.ini  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adr_proposal.yml  bug_report.yml  config.yml  enhancement.yml  feature_request.yml  task.yml
.github/bootstrap/: bootstrap.sh  common.sh  create-foundation-issues.sh
.github/labeler/: labeler.yml
.github/roadmap/: foundation.yml
.github/scripts/: setup-labels.sh
.github/workflows/: ci.yml  docker.yml  docs.yml
adr/: 0000-template.md  0001-use-python-fastapi.md  0002-sqlite-first-postgresql-ready.md  0003-provider-sync-as-reconciliation.md  0004-immutable-originals-generated-data-separate.md  0005-rest-first-delivery.md  0006-plugin-oriented-providers.md  0007-explainable-rotation.md  0008-docker-first-deployment.md  0009-documentation-before-implementation.md  0010-display-client-architecture.md  README.md
alembic/: README.md  env.py
docker/: README.md
docs/: engineering-principles.md  index.md  milestone-2-validation.md  operations.md
docs/architecture/: api-design.md  asset-derivatives.md  background-workers.md  bounded-contexts.md  dakboard-integration.md  data-model.md  overview.md  photo-lifecycle.md  plugin-system.md  provider-sync.md  rotation-engine.md  security-privacy.md  storage.md  sync-workflows.md  system-context.md
docs/design/: configuration-system.md
docs/development/: ai-implementation-guide.md  release-strategy.md  repository-layout.md  standards.md  testing-strategy.md
docs/github/: initial-issues.md  labels.md  milestones.md  project-board.md
docs/operations/: backup-restore.md  deployment.md  display-setup.md  observability.md  security.md
docs/product/: principles.md  vision.md
docs/reference/: api.md  configuration.md
docs/roadmap/: milestone-0-repository-foundation.md  milestone-1-core-domain-storage.md  milestone-2-provider-reconciliation.md  milestone-3-rotation-engine.md  milestone-4-dakboard-delivery.md  milestone-5-operations-hardening.md
docs/user-guide/: getting-started.md
licenses/: Apache-2.0.txt
scripts/: bootstrap.sh  check.sh
src/frameflow/: __init__.py  __main__.py
src/frameflow/api/: app.py  dependencies.py  health.py  schemas.py
src/frameflow/api/routes/: __init__.py  display.py  photos.py  system.py
src/frameflow/application/: README.md
src/frameflow/clients/: README.md
src/frameflow/clients/dakboard/: README.md
src/frameflow/config/: __init__.py  defaults.py  exceptions.py  loader.py  models.py
src/frameflow/db/: __init__.py
src/frameflow/domain/: README.md  __init__.py  models.py
src/frameflow/history/: __init__.py  repository.py
src/frameflow/infrastructure/: README.md  logging.py
src/frameflow/interfaces/: README.md
src/frameflow/metadata/: __init__.py  extractor.py
src/frameflow/providers/: __init__.py  local.py  models.py  protocols.py
src/frameflow/rotation/: __init__.py  engine.py  policies.py
src/frameflow/scanning/: __init__.py  scanner.py  scheduler.py
src/frameflow/services/: __init__.py  photo_selection.py  photo_service.py  photo_synchronizer.py
src/frameflow/storage/: __init__.py  database.py  migrations.py  photos.py  schema.py
src/frameflow/workers/: __init__.py  sync.py
tests/: conftest.py
tests/integration/: test_end_to_end_photo_pipeline.py
tests/unit/: test_api_health.py  test_config.py  test_display_endpoint.py  test_domain_models.py  test_lifespan.py  test_local_file_provider.py  test_logging.py  test_main.py  test_metadata_extractor.py  test_photo_endpoint.py  test_photo_repository.py  test_photo_scanner.py  test_photo_selection_service.py  test_photo_service.py  test_photo_synchronizer.py  test_providers.py  test_repository_scaffold.py  test_rotation_engine.py  test_rotation_history_repository.py  test_scheduler.py  test_storage.py  test_sync_entry_point.py  test_sync_loop.py  test_system_endpoints.py
