[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "frameflow"
version = "1.1.0"
description = "Self-hosted photo delivery platform optimized for digital displays."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "FrameFlow Contributors" }]
keywords = ["photos", "digital-frame", "dakboard", "self-hosted", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "fastapi>=0.138.2",
  "uvicorn[standard]>=0.49.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "sqlalchemy>=2.0.51",
  "alembic>=1.18.5",
  "httpx>=0.28.1",
  "python-multipart>=0.0.32",
  "pillow>=12.2.0",
]

[project.optional-dependencies]
dev = [
  "black>=26.5.1",
  "ruff>=0.15.20",
  "mypy>=2.1.0",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "pytest-asyncio>=1.4.0",
  "pre-commit>=4.6.0",
  "mkdocs-material>=9.7.6",
  "types-PyYAML>=6.0.12.20260518",
]

[project.scripts]
frameflow = "frameflow.__main__:main"

[project.urls]
Homepage = "https://github.com/nbeck/frameflow"
Documentation = "https://nbeck.github.io/frameflow"
Repository = "https://github.com/nbeck/frameflow"
Issues = "https://github.com/nbeck/frameflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/frameflow"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "N", "UP", "W", "S", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["frameflow"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --strict-config --cov=frameflow --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "unit: fast isolated tests",
  "integration: tests requiring local services or file system integration",
  "contract: provider or API contract tests",
]

[tool.coverage.run]
branch = true
source = ["src/frameflow"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
